--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Fluence Codery</h1>
-<p>Hello, world.</p>
-</body>
+  <head>
+    <title>Fluence Codery</title>
+  </head>
+  <body>
+    <h1>Fluence Codery</h1>
+    <p>Hello, world.</p>
+  </body>
 </html>
