--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fluence Codery</title>
+    <title>Craft Codery</title>
   </head>
   <body>
-    <h1>Fluence Codery</h1>
+    <h1>Craft Codery</h1>
     <p>Hello, world.</p>
   </body>
 </html>
