--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Craft Codery</title>
-  </head>
-  <body>
-    <h1>Craft Codery</h1>
-    <p>Hello, world.</p>
-  </body>
+<head>
+  <title>Craft Codery</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
+</head>
+<style>
+  body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #29ace2;
+  }
+
+  h1 {
+    color: #1e5166;
+    font-size: 200px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 0;
+  }
+
+  p {
+    text-align: center;
+    font-size: 20px;
+  }
+
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
+</style>
+<body>
+<h1>CC</h1>
+<p><a href="mailto:support@craftcodery.com">support@craftcodery.com</a></p>
+</body>
 </html>
